--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -101,3 +101,16 @@
         margin: 1.5rem 0;
     }
 }
+@media screen and (max-width: 450px){
+    .about__cards{
+        grid-template-columns: repeat(1, 1fr);
+        width: 93%;
+    }
+    .about__content {
+        width: 82%;
+      }
+      .container{
+        margin: 0;
+      }
+    
+}
