--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -106,6 +106,10 @@
         grid-template-columns: repeat(1, 1fr);
         width: 93%;
     }
+     .about__content p {
+        width: 88%;
+        margin: auto;
+    }
     .about__content {
         width: 82%;
       }
