--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -10,7 +10,7 @@
     border-radius: 2rem;
     background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
     display: grid;
-    place-items: center;
+    /* place-items: center; */
     height: 447px;
 }
 
@@ -83,6 +83,9 @@
 }
 
 @media screen and (max-width: 600px) {
+    .container{
+        width: 100%;
+    }
     .about__me {
         width: 65%;
         margin: 0rem auto 3rem;
@@ -101,20 +104,25 @@
         margin: 1.5rem 0;
     }
 }
-@media screen and (max-width: 450px){
-    .about__cards{
+
+@media screen and (max-width: 450px) {
+    .about__cards {
         grid-template-columns: repeat(1, 1fr);
         width: 93%;
     }
-     .about__content p {
+
+    .about__content {
+        width: 82%;
+        margin: auto;
+    }
+
+    .about__content p {
         width: 88%;
         margin: auto;
     }
-    .about__content {
-        width: 82%;
-      }
-      .container{
+
+    .container {
         margin: 0;
-      }
-    
+    }
+
 }
