--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -24,7 +24,7 @@
 }
 
 .portfolio__item h3 {
-    margin: 2rem 0;
+    margin:11px 0;
 }
 
 .portfolio__item p {
@@ -39,6 +39,7 @@
 
 .portfolio__item-content {
     height: 50%;
+    margin-bottom: 13px;
 }
 
 @media screen and (max-width: 1024px){
